# Tetris-Gymnasium

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  __init__.py  index.html  objects.inv  pyproject.toml  searchindex.js
.github/workflows/: build-docs.yml  publish.yml
_modules/: index.html
components/holder/: index.html
components/queue/: index.html
components/randomizer/: index.html
components/tetromino/: index.html
development/contributing/: index.html
docs/: Makefile  conf.py  index.md  index.rst
docs/components/: holder.md  queue.md  randomizer.md  tetromino.md
docs/development/: contributing.md
docs/environments/: tetris.md  tetris_functional.md
docs/introduction/: installation.md  quickstart.md
docs/utilities/: mappings.md  wrappers.md
environments/tetris/: index.html
environments/tetris_functional/: index.html
examples/: dqn_atari.py  exp_perf_bench.py  exp_perf_bench_bs.py  exp_static.py  exp_t.py  og.py  perf_state_test.py  perf_val_clones.py  play.py  play_interactive.py  play_interactive_3d.py  play_interactive_cnn.py  play_interactive_cnn_grouped.py  play_interactive_fn.py  play_random.py  play_random_fn.py  play_random_fn_bs.py  play_random_functional.py  train_cnn.py  train_cnn_grouped.py  train_cnn_grouped_epochs.py  train_cnn_grouped_epochs_reworked.py  train_cnn_grouped_epochs_reworked_strip.py  train_cnn_grouped_epochs_stripped.py  train_cnn_grouped_masked.py  train_cnn_unstripped.py  train_lin.py  train_lin_grouped.py  train_ppo.py  woa.py
examples/alpha_zero/: agent.py  mcts.py  mcts_pure.py  model.py  simulation.py  train.py
genindex/: index.html
introduction/installation/: index.html
introduction/quickstart/: index.html
main/: .buildinfo  index.html
main/_modules/: index.html
main/development/contributing/: index.html
main/genindex/: index.html
main/search/: index.html
search/: index.html
tests/: __init__.py  conftest.py
tests/helpers/: __init__.py  mock.py
tests/test_base_env/: __init__.py  test_base_env_game_over.py  test_base_env_general.py  test_base_env_line_clear.py  test_base_env_movement.py  test_base_env_reset.py  test_base_env_rotation.py
tests/test_components/: __init__.py  conftest.py  test_tetromino_holder.py  test_tetromino_queue.py  test_tetromino_randomizer.py
tests/test_fn_env/: test_fn_env_general.py
tests/test_functional/: __init__.py  conftest.py  test_batched.py  test_integration.py  test_jax_compat.py  test_queue.py  test_tetrominoes.py
tests/test_grouped_actions/: test_grouped_actions.py
tests/test_grouped_env/: __init__.py  conftest.py  expected_result_i_placement.csv  test_grouped_reset.py
tests/test_integration/: __init__.py  test_gameplay.py
tests/test_wrappers/: __init__.py  test_feature_vector_observation.py  test_rgb_observation.py
tetris_gymnasium/: __init__.py  environment.py  run.py  tetris.py  tetrominoes.py
tetris_gymnasium/components/: __init__.py  holder.py  randomizer.py  scheduler.py  tetromino.py  tetromino_holder.py  tetromino_queue.py  tetromino_randomizer.py
tetris_gymnasium/envs/: __init__.py  game_logic.py  tetris.py  tetris_fn.py  tetris_lin.py
tetris_gymnasium/examples/: play.py  train.py  train_cnn.py  train_lin.py
tetris_gymnasium/functional/: __init__.py  core.py  game_logic.py  holder.py  logic.py  queue.py  tetrominoes.py
tetris_gymnasium/mappings/: __init__.py  actions.py  rewards.py
tetris_gymnasium/util/: __init__.py  tetrominoes.py
tetris_gymnasium/wrappers/: __init__.py  action.py  grouped.py  observation.py
utilities/mappings/: index.html
utilities/wrappers/: index.html
(+57 files in other folders)
