[tool.poetry]
name = "tetris-gymnasium"
version = "0.1.0"
description = ""
authors = ["mw <maximilian.weichart@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "^0.29.1"
numpy = "^1.26.4"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
torch = "^2.2.1"
typer = "^0.9.0"
stable-baselines3 = "^2.2.1"
tyro = "^0.7.3"
tensorboard = "^2.16.2"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
