[tool.poetry]
name = "tetris-gymnasium"
version = "0.1.0"
description = ""
authors = ["mw <maximilian.weichart@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gymnasium = ">=0.28.1"
numpy = "^1.21.6"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.examples.dependencies]
torch = "^2.2.1"
typer = "^0.9.0"
stable-baselines3 = "^2.2.1"
tyro = "^0.7.3"
tensorboard = "^2.10.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7"
furo = "^2024.1.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
